rest_boton/k8s/mypod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: prototipo
  labels:
    name: mypod
spec:
  containers:
  - name: mypod
    image: nginx
