rest_boton/k8s/semillero_ingress_host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx
  rules:
    - host: semilleros.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: servicio-clusterip
                port: 
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: servicio-clusterip2
                port: 
                  number: 80
